--- a/poc2/poc-cookie/back/package.json
+++ b/poc2/poc-cookie/back/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon"
   },
   "dependencies": {
     "cors": "^2.8.5",
